--- a/clusters/demo2/infr-apps/fluent-bit.yaml
+++ b/clusters/demo2/infr-apps/fluent-bit.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: k8s-spb2-backend3-certmanager
+  name: k8s-spb2-backend2-fluent-bit
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"
@@ -12,26 +12,18 @@ spec:
     syncOptions:
     - CreateNamespace=true
     - FailOnSharedResource=false
-    - Validate=false
   project: default
   destination:
-    name: kind-spoke-3
-    namespace: cert-manager
+    name: kind-spoke-2
+    namespace: fluent-bit
   sources:
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
       kustomize:
-        nameSuffix: -k8s-spb2-backend3-certmanager
+        nameSuffix: -k8s-spb2-backend2-fluent-bit
         commonLabels:
-          jit-rbac/app: k8s-spb2-backend3-certmanager
+          jit-rbac/app: k8s-spb2-backend2-fluent-bit
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
-      path: cert-manager
-      helm:
-        releaseName: k8s-spb2-backend3-certmanager
-        values: |
-          installCRDs: true
-          
-# startupapicheck:
-#   enabled: false
+      path: fluent-bit
