--- a/clusters/demo2/custom-resource/clusterrole.yaml
+++ b/clusters/demo2/custom-resource/clusterrole.yaml
@@ -11,6 +11,7 @@ rules:
     - daemonsets
     - deployments
     - statefulsets
+    - replicasets
     - verticalpodautoscalers
     - horizontalpodautoscalers
     - cronjobs
