--- a/clusters/appset.yaml
+++ b/clusters/appset.yaml
@@ -15,6 +15,7 @@ spec:
       directories:
       - path: clusters/demo*
   syncPolicy:
+    prune: true
     preserveResourcesOnDeletion: true
   template:
     metadata:
