--- a/clusters/appset.yaml
+++ b/clusters/appset.yaml
@@ -14,9 +14,6 @@ spec:
       revision: HEAD
       directories:
       - path: clusters/test*
-  syncPolicy:
-    prune: true
-    preserveResourcesOnDeletion: true
   template:
     metadata:
       labels:
@@ -29,7 +26,7 @@ spec:
       project: default
       source:
         repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
-        targetRevision: HEAD
+        targetRevision: HEADx
         path: '{{.path.path}}/infr-apps'
         directory:
           recurse: true
