--- a/clusters/appset.yaml
+++ b/clusters/appset.yaml
@@ -26,7 +26,7 @@ spec:
       project: default
       source:
         repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
-        targetRevision: HEADx
+        targetRevision: HEAD
         path: '{{.path.path}}/infr-apps'
         directory:
           recurse: true
