--- a/clusters/test1/infr-apps/rbac-base.yaml
+++ b/clusters/test1/infr-apps/rbac-base.yaml
@@ -13,9 +13,7 @@ spec:
   source:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
     targetRevision: HEAD
-    path: shared/jit-rbac-roles
-    directory:
-      recurse: true
+    path: shared/jit-rbac-base
   syncPolicy:
     automated:
       prune: false
