--- a/clusters/test1/appset.yaml
+++ b/clusters/test1/appset.yaml
@@ -12,7 +12,7 @@ spec:
         - cluster: k8s-spb2-backend1
           url: https://spoke-1-control-plane:6443
   syncPolicy:
-    prune: false
+    prune: true
     preserveResourcesOnDeletion: true
   template:
     metadata:
