--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -21,7 +21,6 @@ spec:
       targetRevision: HEAD
       path: shared/jit-rbac
       kustomize:
-        nameSuffix: -k8s-spb2-backend1-certmanager
         commonLabels:
           jit-rbac/app: k8s-spb2-backend1-certmanager
         patches:
@@ -33,6 +32,9 @@ spec:
             patch: |-
               - op: replace
                 path: /roleRef/name
+                value: argocd-manager-certmanager
+              - op: replace
+                path: /metadata/name
                 value: argocd-manager-certmanager
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
