--- a/shared/jit-rbac-base/certmanager.yaml
+++ b/shared/jit-rbac-base/certmanager.yaml
@@ -95,7 +95,10 @@ rules:
     verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
   - apiGroups: ["gateway.networking.k8s.io"]
     resources: ["gateways", "gateways/finalizers", "httproutes", "httproutes/finalizers"]
-    verbs: ["get", "list", "watch", "update", "patch"]
+    verbs: ["get", "list", "watch", "update", "patch", "create", "delete"]
+  - apiGroups: ["coordination.k8s.io"]
+    resources: ["leases"]
+    verbs: ["get", "update", "patch", "create", "list", "watch"]
   - apiGroups: ["networking.k8s.io"]
     resources: ["ingresses/finalizers"]
     verbs: ["update", "patch"]
