--- a/clusters/test1/custom-resource/clusterrole.yaml
+++ b/clusters/test1/custom-resource/clusterrole.yaml
@@ -75,3 +75,9 @@ rules:
   - apiGroups: ["batch"]
     resources: ["jobs"]
     verbs: ["delete", "list", "get", "watch", "update"]
+  - apiGroups: ["gateway.networking.k8s.io"]
+    resources: ["httproutes"]
+    verbs: ["create", "delete", "get", "list", "watch"]
+  - apiGroups: ["coordination.k8s.io"]
+    resources: ["leases"]
+    verbs: ["get", "update", "patch", "create", "list", "watch"]
