--- a/clusters/test3/custom-resource/clusterrole.yaml
+++ b/clusters/test3/custom-resource/clusterrole.yaml
@@ -53,25 +53,25 @@ rules:
     - storageclasses
     - csistoragecapacities
     verbs: ["get", "list", "watch"]
-  - apiGroups: ["apiextensions.k8s.io"]
-    resources: ["customresourcedefinitions"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: [""]
-    resources: ["events"]
-    verbs: ["create", "list"]
-  - apiGroups: [""]
-    resources: ["namespaces"]
-    verbs: ["create"]
-  - apiGroups: ["rbac.authorization.k8s.io"]
-    resources: ["clusterrolebindings"]
-    verbs: ["create", "delete"]
-  - apiGroups: ["rbac.authorization.k8s.io"]
-    resources: ["clusterroles"]
-    resourceNames: ["argocd-manager-full", "argocd-manager-certmanager"]
-    verbs: ["bind", "get", "update", "patch"]
-  - apiGroups: ["rbac.authorization.k8s.io"]
-    resources: ["clusterroles"]
-    verbs: ["create","escalate"]
-  - apiGroups: ["batch"]
-    resources: ["jobs"]
-    verbs: ["delete", "list", "get", "watch", "update"]
+  # - apiGroups: ["apiextensions.k8s.io"]
+  #   resources: ["customresourcedefinitions"]
+  #   verbs: ["get", "list", "watch"]
+  # - apiGroups: [""]
+  #   resources: ["events"]
+  #   verbs: ["create", "list"]
+  # - apiGroups: [""]
+  #   resources: ["namespaces"]
+  #   verbs: ["create"]
+  # - apiGroups: ["rbac.authorization.k8s.io"]
+  #   resources: ["clusterrolebindings"]
+  #   verbs: ["create", "delete"]
+  # - apiGroups: ["rbac.authorization.k8s.io"]
+  #   resources: ["clusterroles"]
+  #   resourceNames: ["argocd-manager-full", "argocd-manager-certmanager"]
+  #   verbs: ["bind", "get", "update", "patch"]
+  # - apiGroups: ["rbac.authorization.k8s.io"]
+  #   resources: ["clusterroles"]
+  #   verbs: ["create","escalate"]
+  # - apiGroups: ["batch"]
+  #   resources: ["jobs"]
+  #   verbs: ["delete", "list", "get", "watch", "update"]
