--- a/clusters/test3/custom-resource/clusterrole.yaml
+++ b/clusters/test3/custom-resource/clusterrole.yaml
@@ -59,9 +59,9 @@ rules:
   - apiGroups: [""]
     resources: ["events"]
     verbs: ["create", "list"]
-  # - apiGroups: [""]
-  #   resources: ["namespaces"]
-  #   verbs: ["create"]
+  - apiGroups: [""]
+    resources: ["namespaces"]
+    verbs: ["create"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterrolebindings"]
     verbs: ["create", "delete"]
