--- a/clusters/test4/infr-apps/certmanager.yaml
+++ b/clusters/test4/infr-apps/certmanager.yaml
@@ -10,7 +10,7 @@ spec:
     automated:
       prune: true
     syncOptions:
-    - CreateNamespace=true
+    # - CreateNamespace=true
     - FailOnSharedResource=false
   project: default
   destination:
