--- a/clusters/test3/custom-resource/clusterrole.yaml
+++ b/clusters/test3/custom-resource/clusterrole.yaml
@@ -3,58 +3,58 @@ kind: ClusterRole
 metadata:
   name: argocd-manager-watcher
 rules:
-  - apiGroups: ["*"]
-    resources: ["*"]
+  # - apiGroups: ["*"]
+  #   resources: ["*"]
   #     verbs: ["*"]
-  # - apiGroups: ["admissionregistration.k8s.io", "apiextensions.k8s.io", "apiregistration.k8s.io", "apps", "autoscaling.k8s.io", "autoscaling", "batch", "cert-manager.io", "extensions", "flowcontrol.apiserver.k8s.io", "grafana.integreatly.org", "jaegertracing.io", "keda.sh", "monitoring.coreos.com", "networking.k8s.io", "operator.victoriametrics.com", "policy", "rbac.authorization.k8s.io", "ricoberger.de", "", "velero.io", "storage.k8s.io"]
-  #   resources:
-  #   - mutatingwebhookconfigurations
-  #   - validatingwebhookconfigurations
-  #   - apiservices
-  #   - daemonsets
-  #   - deployments
-  #   - statefulsets
-  #   - verticalpodautoscalers
-  #   - horizontalpodautoscalers
-  #   - cronjobs
-  #   - certificates
-  #   - issuers
-  #   - ingresses
-  #   - flowschemas
-  #   - prioritylevelconfigurations
-  #   - grafanadashboards
-  #   - jaegers
-  #   - scaledobjects
-  #   - podmonitors
-  #   - prometheusrules
-  #   - servicemonitors
-  #   - ingressclasses
-  #   - networkpolicies
-  #   - vmagents
-  #   - vmnodescrapes
-  #   - vmpodscrapes
-  #   - vmservicescrapes
-  #   - poddisruptionbudgets
-  #   - podsecuritypolicies
-  #   - clusterrolebindings
-  #   - clusterroles
-  #   - rolebindings
-  #   - roles
-  #   - vaultsecrets
-  #   - configmaps
-  #   - endpoints
-  #   - namespaces
-  #   - pods
-  #   - secrets
-  #   - serviceaccounts
-  #   - services
-  #   - backupstoragelocations
-  #   - schedules
-  #   - volumesnapshotlocations
-  #   - persistentvolumeclaims
-  #   - persistentvolumes
-  #   - storageclasses
-  #   - csistoragecapacities
+  - apiGroups: ["admissionregistration.k8s.io", "apiextensions.k8s.io", "apiregistration.k8s.io", "apps", "autoscaling.k8s.io", "autoscaling", "batch", "cert-manager.io", "extensions", "flowcontrol.apiserver.k8s.io", "grafana.integreatly.org", "jaegertracing.io", "keda.sh", "monitoring.coreos.com", "networking.k8s.io", "operator.victoriametrics.com", "policy", "rbac.authorization.k8s.io", "ricoberger.de", "", "velero.io", "storage.k8s.io"]
+    resources:
+    - mutatingwebhookconfigurations
+    - validatingwebhookconfigurations
+    - apiservices
+    - daemonsets
+    - deployments
+    - statefulsets
+    - verticalpodautoscalers
+    - horizontalpodautoscalers
+    - cronjobs
+    - certificates
+    - issuers
+    - ingresses
+    - flowschemas
+    - prioritylevelconfigurations
+    - grafanadashboards
+    - jaegers
+    - scaledobjects
+    - podmonitors
+    - prometheusrules
+    - servicemonitors
+    - ingressclasses
+    - networkpolicies
+    - vmagents
+    - vmnodescrapes
+    - vmpodscrapes
+    - vmservicescrapes
+    - poddisruptionbudgets
+    - podsecuritypolicies
+    - clusterrolebindings
+    - clusterroles
+    - rolebindings
+    - roles
+    - vaultsecrets
+    - configmaps
+    - endpoints
+    - namespaces
+    - pods
+    - secrets
+    - serviceaccounts
+    - services
+    - backupstoragelocations
+    - schedules
+    - volumesnapshotlocations
+    - persistentvolumeclaims
+    - persistentvolumes
+    - storageclasses
+    - csistoragecapacities
     verbs: ["get", "list", "watch"]
   - apiGroups: ["apiextensions.k8s.io"]
     resources: ["customresourcedefinitions"]
