--- a/shared/jit-rbac-base/certmanager.yaml
+++ b/shared/jit-rbac-base/certmanager.yaml
@@ -101,3 +101,6 @@ rules:
   - apiGroups: ["route.openshift.io"]
     resources: ["routes/custom-host"]
     verbs: ["create"]
+  - apiGroups: [""]
+    resources: ["pods/log"]
+    verbs: ["get", "list", "watch"]
