--- a/clusters/test4/custom-resource/clusterrole.yaml
+++ b/clusters/test4/custom-resource/clusterrole.yaml
@@ -64,7 +64,7 @@ rules:
     verbs: ["create"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterrolebindings"]
-    verbs: ["create", "delete"]
+    verbs: ["create", "delete", "update"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles"]
     resourceNames: ["argocd-manager-full", "argocd-manager-certmanager"]
