--- a/clusters/demo1/infr-apps/custom-resource.yaml
+++ b/clusters/demo1/infr-apps/custom-resource.yaml
@@ -11,9 +11,9 @@ spec:
       prune: false
   project: default
   destination:
-    name: kind-test-1
+    name: kind-demo-1
     namespace: kube-system
   source:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
     targetRevision: HEAD
-    path: clusters/test1/custom-resource
+    path: clusters/demo1/custom-resource
