--- a/clusters/demo1/infr-apps/rbac-base.yaml
+++ b/clusters/demo1/infr-apps/rbac-base.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   project: default
   destination:
-    name: kind-test-1
+    name: kind-demo-1
     namespace: kube-system
   source:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
