--- a/clusters/demo1/infr-apps/custom-resource.yaml
+++ b/clusters/demo1/infr-apps/custom-resource.yaml
@@ -11,7 +11,7 @@ spec:
       prune: false
   project: default
   destination:
-    name: kind-demo-1
+    name: kind-spoke-1
     namespace: kube-system
   source:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
