--- a/clusters/test1/infr-apps/custom-resource.yaml
+++ b/clusters/test1/infr-apps/custom-resource.yaml
@@ -1,20 +1,19 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: k8s-spb2-backend1-rbac-base
+  name: k8s-spb2-backend1-rbac-bootstrap
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "0"
+    argocd.argoproj.io/sync-wave: "-5"
 spec:
+  syncPolicy:
+    automated:
+      prune: false
   project: default
   destination:
-    name: kind-spoke-1
+    name: kind-test-1
     namespace: kube-system
   source:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
     targetRevision: HEAD
-    path: shared/jit-rbac-base
-  syncPolicy:
-    automated:
-      prune: false
-      selfHeal: false
+    path: clusters/test1/custom-resource
