--- a/clusters/test1/infr-apps/rbac-base.yaml
+++ b/clusters/test1/infr-apps/rbac-base.yaml
@@ -1,19 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: k8s-spb2-backend1-rbac-bootstrap
+  name: k8s-spb2-backend1-rbac-base
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "-5"
+    argocd.argoproj.io/sync-wave: "0"
 spec:
-  syncPolicy:
-    automated:
-      prune: false
   project: default
   destination:
-    name: kind-spoke-1
+    name: kind-test-1
     namespace: kube-system
   source:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
     targetRevision: HEAD
-    path: clusters/demo1/custom-resource
+    path: shared/jit-rbac-base
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: false
