--- a/shared/jit-rbac-base/certmanager.yaml
+++ b/shared/jit-rbac-base/certmanager.yaml
@@ -104,3 +104,9 @@ rules:
   - apiGroups: [""]
     resources: ["pods/log"]
     verbs: ["get", "list", "watch"]
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources: ["clusterroles"]
+    verbs: ["bind", "escalate", "get", "list", "watch"]
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources: ["roles"]
+    verbs: ["bind", "escalate", "get", "list", "watch"]
