--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     argocd.argoproj.io/sync-wave: "2"
-    jit-rbac/required-role: "argocd-manager-cert-manager"
+    jit-rbac/required-role: "argocd-manager-certmanager"
 spec:
   syncPolicy:
     automated:
@@ -18,10 +18,12 @@ spec:
     name: kind-test-1
     namespace: cert-manager
   sources:
-    # JIT RBAC Template for cert-manager
+    # JIT RBAC Role for cert-manager
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
-      path: shared/jit-rbac-templates/cert-manager
+      path: shared/rbac-roles
+      directory:
+        include: certmanager.yaml
     # Dynamic JIT RBAC Hooks
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
@@ -30,7 +32,7 @@ spec:
         nameSuffix: -k8s-spb2-backend1-certmanager
         commonLabels:
           jit-rbac/app: k8s-spb2-backend1-certmanager
-          jit-rbac/required-role: argocd-manager-cert-manager
+          jit-rbac/required-role: argocd-manager-certmanager
         patchesJson6902:
           - target:
               group: rbac.authorization.k8s.io
@@ -40,7 +42,7 @@ spec:
             patch: |-
               - op: replace
                 path: /roleRef/name
-                value: argocd-manager-cert-manager
+                value: argocd-manager-certmanager
               - op: replace
                 path: /metadata/name
                 value: argo-jit-rbac-binding-k8s-spb2-backend1-certmanager
