--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -20,12 +20,12 @@ spec:
   sources:
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
-      path: shared/rbac-roles
+      path: shared/jit-rbac-base
       directory:
         include: certmanager.yaml
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
-      path: shared/jit-rbac-dynamic
+      path: shared/jit-rbac
       kustomize:
         nameSuffix: -k8s-spb2-backend1-certmanager
         commonLabels:
