--- a/clusters/test1/custom-resource/clusterrole.yaml
+++ b/clusters/test1/custom-resource/clusterrole.yaml
@@ -3,6 +3,7 @@ kind: ClusterRole
 metadata:
   name: argocd-manager-watcher
   annotations:
+    argocd.argoproj.io/sync-wave: "-6"
     description: "Minimal ArgoCD watcher role for downtime period - JIT RBAC + monitoring only"
 rules:
   # Мониторинг состояния кластера (READ-ONLY)
@@ -10,14 +11,24 @@ rules:
     resources:
       - configmaps
       - endpoints
-      - namespaces
-      - pods
       - secrets
       - serviceaccounts
       - services
       - persistentvolumes
       - persistentvolumeclaims
     verbs: ["get", "list", "watch"]
+  
+  # Управление pods (read + cleanup для JIT RBAC)
+  - apiGroups: [""]
+    resources:
+      - pods
+    verbs: ["get", "list", "watch", "delete"]
+  
+  # Управление namespaces (создание для приложений)
+  - apiGroups: [""]
+    resources:
+      - namespaces
+    verbs: ["get", "list", "watch", "create"]
 
   # Мониторинг workload ресурсов (READ-ONLY)
   - apiGroups: ["apps"]
@@ -62,10 +73,10 @@ rules:
     resources: ["clusterrolebindings"]
     verbs: ["create", "delete", "update", "get", "list", "watch"]
 
-  # JIT RBAC - Чтение ролей для bind операций
+  # JIT RBAC - Чтение ролей для валидации
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles"]
-    verbs: ["get", "list", "watch", "bind"]
+    verbs: ["get", "list", "watch"]
 
   # JIT RBAC - Cleanup jobs (только для JIT RBAC)
   - apiGroups: ["batch"]
