--- a/clusters/test1/infr-apps/rbac-watcher.yaml
+++ b/clusters/test1/infr-apps/rbac-watcher.yaml
@@ -1,14 +1,12 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: k8s-spb2-backend1-rbac-bootstrap
+  name: k8s-spb2-backend1-rbac-watcher
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "-5"
+    argocd.argoproj.io/sync-wave: "-6"
+    description: "Deploy minimal watcher ClusterRole for ArgoCD"
 spec:
-  syncPolicy:
-    automated:
-      prune: false
   project: default
   destination:
     name: kind-test-1
@@ -17,3 +15,8 @@ spec:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
     targetRevision: HEAD
     path: clusters/test1/custom-resource
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: false
+
