--- a/shared/jit-rbac-base/kustomization.yaml
+++ b/shared/jit-rbac-base/kustomization.yaml
@@ -1,7 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - certmanager.yaml
-commonLabels:
-  app.kubernetes.io/managed-by: argocd
-  app.kubernetes.io/part-of: argo-jit-rbac-roles
+  - argocd-manager-certmanager.yaml
