--- a/clusters/test1/infr-apps/certmanager.yaml
+++ b/clusters/test1/infr-apps/certmanager.yaml
@@ -20,34 +20,7 @@ spec:
   sources:
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
-      path: shared/jit-rbac
-      kustomize:
-        nameSuffix: -k8s-spb2-backend1-certmanager
-        commonLabels:
-          jit-rbac/app: k8s-spb2-backend1-certmanager
-          jit-rbac/required-role: argocd-manager-certmanager
-        patchesJson6902:
-          - target:
-              group: rbac.authorization.k8s.io
-              version: v1
-              kind: ClusterRoleBinding
-              name: argo-jit-rbac-binding
-            patch: |-
-              - op: replace
-                path: /roleRef/name
-                value: argocd-manager-certmanager
-              - op: replace
-                path: /metadata/name
-                value: argo-jit-rbac-binding-k8s-spb2-backend1-certmanager
-          - target:
-              group: batch
-              version: v1
-              kind: Job
-              name: argocd-jit-rbac-cleanup
-            patch: |-
-              - op: replace
-                path: /metadata/name
-                value: argocd-jit-rbac-cleanup-k8s-spb2-backend1-certmanager
+      path: shared/jit-rbac-certmanager
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
       path: cert-manager
