--- a/clusters/test1/custom-resource/clusterrole.yaml
+++ b/clusters/test1/custom-resource/clusterrole.yaml
@@ -67,11 +67,7 @@ rules:
     verbs: ["create", "delete"]
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterroles"]
-    resourceNames: ["argocd-manager-full"]
-    verbs: ["bind", "get", "update", "patch"]
-  - apiGroups: ["rbac.authorization.k8s.io"]
-    resources: ["clusterroles"]
-    verbs: ["create","escalate"]
+    verbs: ["bind", "get", "update", "patch", "create", "escalate"]
   - apiGroups: ["batch"]
     resources: ["jobs"]
     verbs: ["delete", "list", "get", "watch", "update"]
