--- a/clusters/test1/infr-apps/rbac-base.yaml
+++ b/clusters/test1/infr-apps/rbac-base.yaml
@@ -13,7 +13,9 @@ spec:
   source:
     repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
     targetRevision: HEAD
-    path: shared/jit-rbac-base
+    path: clusters/test1/custom-resource
+    directory:
+      include: clusterrole.yaml  # argocd-manager-watcher
   syncPolicy:
     automated:
       prune: false
