--- a/clusters/test1/infr-apps/custom-resource.yaml
+++ b/clusters/test1/infr-apps/custom-resource.yaml
@@ -16,14 +16,9 @@ spec:
   destination:
     name: kind-test-1
     namespace: kube-system
-  sources:
-    - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
-      targetRevision: HEAD
-      path: shared/jit-rbac
-      kustomize:
-        nameSuffix: -k8s-spb2-backend1-custom-resource
-        commonLabels:
-          jit-rbac/app: k8s-spb2-backend1-custom-resource
-    - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
-      targetRevision: HEAD
-      path: clusters/test1/custom-resource
+  source:
+    repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
+    targetRevision: HEAD
+    path: clusters/test1/custom-resource
+    directory:
+      include: clusterrolebinding.yaml  # argocd-manager-watcher binding
