--- a/clusters/test1/infr-apps/rbac-base.yaml
+++ b/clusters/test1/infr-apps/rbac-base.yaml
@@ -15,7 +15,7 @@ spec:
     targetRevision: HEAD
     path: clusters/test1/custom-resource
     directory:
-      include: clusterrole.yaml  # argocd-manager-watcher
+      include: clusterrole.yaml
   syncPolicy:
     automated:
       prune: false
