--- a/clusters/test1/custom-resource/clusterrole.yaml
+++ b/clusters/test1/custom-resource/clusterrole.yaml
@@ -70,4 +70,4 @@ rules:
     verbs: ["bind", "get", "update", "patch", "create", "escalate"]
   - apiGroups: ["batch"]
     resources: ["jobs"]
-    verbs: ["delete", "list", "get", "watch", "update"]
+    verbs: ["create", "delete", "list", "get", "watch", "update"]
