--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -16,6 +16,7 @@ spec:
     metadata:
       labels:
         app.kubernetes.io/part-of: argo-jit-rbac
+        jit-rbac/app: PLACEHOLDER  # будет заменено через commonLabels
     spec:
       serviceAccountName: argocd-manager
       restartPolicy: Never
