--- a/clusters/test2/infr-apps/certmanager.yaml
+++ b/clusters/test2/infr-apps/certmanager.yaml
@@ -17,13 +17,11 @@ spec:
     name: kind-test-2
     namespace: cert-manager
   sources:
-    # JIT RBAC role definition
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac-roles
       directory:
-        include: argocd-manager-certmanager.yaml
-    # JIT RBAC hooks (PreSync + PostSync)
+        include: certmanager-role.yaml
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
@@ -46,7 +44,6 @@ spec:
               - op: replace
                 path: /metadata/name
                 value: argocd-jit-rbac-cleanup-certmanager
-    # Cert-manager Helm chart
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
       path: cert-manager
