--- a/clusters/test3/infr-apps/victoria-metrics-operator.yaml
+++ b/clusters/test3/infr-apps/victoria-metrics-operator.yaml
@@ -1,10 +1,10 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: k8s-spb3-backend3-certmanager
+  name: k8s-spb3-backend3-victoria-metrics-operator
   namespace: argocd
   annotations:
-    argocd.argoproj.io/sync-wave: "2"
+    argocd.argoproj.io/sync-wave: "3"
 spec:
   syncPolicy:
     automated:
@@ -15,39 +15,44 @@ spec:
   project: default
   destination:
     name: kind-test-3
-    namespace: cert-manager
+    namespace: victoria-metrics-operator
   sources:
+    # JIT RBAC role definition
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac-roles
       directory:
-        include: certmanager-role.yaml
+        include: victoria-metrics-operator-role.yaml
+    # JIT RBAC hooks (PreSync + PostSync)
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
       kustomize:
         commonLabels:
-          jit-rbac/app: k8s-spb3-backend3-certmanager
+          jit-rbac/app: k8s-spb3-backend3-victoria-metrics-operator
         patches:
           - target:
               kind: ClusterRoleBinding
             patch: |-
               - op: replace
                 path: /metadata/name
-                value: argocd-manager-certmanager
+                value: argocd-manager-victoria-metrics-operator
               - op: replace
                 path: /roleRef/name
-                value: argocd-manager-certmanager
+                value: argocd-manager-victoria-metrics-operator
           - target:
               kind: Job
             patch: |-
               - op: replace
                 path: /metadata/name
-                value: argocd-jit-rbac-cleanup-certmanager
+                value: argocd-jit-rbac-cleanup-victoria-metrics-operator
+    # Victoria Metrics Operator Helm chart
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
-      path: cert-manager
+      path: victoria-metrics-operator
       helm:
-        releaseName: k8s-spb3-backend3-certmanager
+        releaseName: k8s-spb3-backend3-victoria-metrics-operator
         values: |
-          installCRDs: true
+          operator:
+            create: true
+
